--- a/script/config/config_cvpo.yaml
+++ b/script/config/config_cvpo.yaml
@@ -28,7 +28,7 @@ sample_episode_num: 20
 episode_rerun_num: 40
 evaluate_episode_num: 20
 
-cvpo:
+cvpo: &CVPO
     num_qc: 1
     cost_limit: *COST_LIM
     use_cost_decay: False
@@ -61,3 +61,5 @@ cvpo:
         warmup_steps: 0
         batch_size: 300
         buffer_size: 80000
+
+cvpo_jp: *CVPO
